--- a/package.json
+++ b/package.json
@@ -20,12 +20,15 @@
     "bull": "^4.15.1",
     "bull-board": "^2.1.3",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-rate-limit": "^7.4.0",
     "express-rate-limiter": "^1.3.1",
+    "express-session": "^1.18.0",
     "form-data": "^4.0.0",
     "fs": "^0.0.1-security",
+    "node-localstorage": "^3.0.5",
     "nodemon": "^3.1.4",
     "openai": "^4.52.7",
     "pg": "^8.12.0",
