--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "aimodule",
   "version": "1.0.0",
   "main": "server.js",
-  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server.js",
@@ -19,8 +18,10 @@
     "body-parser": "^1.20.2",
     "bull": "^4.15.1",
     "bull-board": "^2.1.3",
+    "cookie": "^0.6.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "csurf": "^1.11.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-rate-limit": "^7.4.0",
