--- a/package.json
+++ b/package.json
@@ -29,10 +29,12 @@
     "express-session": "^1.18.0",
     "form-data": "^4.0.0",
     "fs": "^0.0.1-security",
+    "node-fetch": "^3.3.2",
     "node-localstorage": "^3.0.5",
     "nodemon": "^3.1.4",
     "openai": "^4.52.7",
     "pg": "^8.12.0",
+    "tough-cookie": "^4.1.4",
     "twilio": "^5.2.2"
   }
 }
