--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "nodemon server.js",
     "dev": "nodemon index.js"
   },
+  "proxy": "http://localhost:5000",
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -32,6 +33,7 @@
     "nodemon": "^3.1.4",
     "openai": "^4.52.7",
     "pg": "^8.12.0",
+    "socket.io": "^4.7.5",
     "twilio": "^5.2.2"
   }
 }
